--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "^17.0.2",
     "react-kakao-maps-sdk": "^1.1.1",
     "react-router-dom": "^6.3.0",
