--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-kakao-maps-sdk": "^1.1.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
